--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,3 @@
-body, header {
-  padding-left: 2.5%;
-  padding-right: 2.5%;
-}
-
 @font-face {
   font-family: OpenSans-Light;
   src: url(/fonts/OpenSans-Light.ttf?846a12caf01a940847a709ae90dff26f);
@@ -13,19 +8,33 @@ body, header {
 }
 @font-face {
   font-family: NorthAvvelion;
-  src: url("/fonts/North Avellion DEMO.ttf?06df238f4039096a48a5aeb8daff44f0");
+  src: url(/fonts/NorthAvellion.otf?d8760aa4b621e757c2df5afeac48256f);
 }
 @font-face {
-  font-family: Montserrat-Regular;
-  src: url(/fonts/Montserrat-Regular.ttf?3cd786652b8a2e9d41f210cb1a527ff6);
+  font-family: Montserrat-Light;
+  src: url(/fonts/Montserrat-Light.ttf?02afb26fe72fcc05298817491c044b7b);
 }
 @font-face {
   font-family: Montserrat-Bold;
   src: url(/fonts/Montserrat-Bold.ttf?079ca05d3ded9bc107ab8a8da013be22);
 }
-.header__topbar {
-  display: flex;
-  align-items: center;
+main, header {
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  font-family: Montserrat-Light;
+}
+
+body {
+  overflow: hidden;
+}
+
+.bold {
+  font-family: Montserrat-Bold;
+}
+
+h2 {
+  font-family: NorthAvvelion;
+  font-size: 125px;
 }
 
 .plus {
@@ -36,28 +45,100 @@ body, header {
 
 .tagline {
   font-family: OpenSans-Light;
-  font-size: 24px;
-  margin-bottom: 0;
+  font-size: 15px;
+  margin-bottom: 5px;
   padding-left: 5px;
 }
 
 .header__title__section {
   display: flex;
   flex-direction: column;
-  background-color: #f4f4f4;
   text-align: center;
-  height: 100%;
 }
 .header__title__section h2 {
-  padding: 50px 0;
+  padding: 15px 0;
+  font-size: 50px;
 }
 .header__title__section p {
-  font-family: Montserrat-Regular;
+  font-family: Montserrat-Light;
 }
-.header__title__section .bold {
+.header__title__section span {
   font-family: Montserrat-Bold;
 }
 
-h2 {
-  font-size: 120px;
+.page__title {
+  text-align: center;
+  padding: 45px 0;
+}
+
+.title__layout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spotify__section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.horizontal_line {
+  margin: 7% 0;
+}
+
+.title__name {
+  font-size: 75px;
+}
+
+.banner {
+  margin-top: 12%;
+  text-align: center;
+  background-color: #f0b41a;
+  color: white;
+}
+
+footer p {
+  font-size: 20px;
+  font-family: OpenSans-Light;
+}
+footer .link__style {
+  text-decoration: none;
+  color: black;
+}
+footer .link__style:hover {
+  transform: scale(1.2);
+  font-family: OpenSans-Bold;
+  color: black;
+}
+
+@media (min-width: 1000px) {
+  .tagline {
+    font-size: 20px;
+    margin-bottom: 0;
+    padding-left: 20px;
+  }
+
+  .page__title {
+    padding: 90px 0;
+  }
+
+  .header__title__section {
+    line-height: 1.9;
+  }
+  .header__title__section h2 {
+    font-size: 30px;
+  }
+}
+@media (min-width: 1400px) {
+  .header__title__section h2 {
+    font-size: 50px;
+    padding: 55px 0;
+  }
+}
+@media (min-width: 1700px) {
+  .header__title__section h2 {
+    font-size: 100px;
+    padding: 55px 0;
+  }
 }
