--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,8 +1,3 @@
-body, header {
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-}
-
 @font-face {
     font-family: OpenSans-Light;
     src: url('../fonts/OpenSans/OpenSans-Light.ttf');
@@ -15,12 +10,12 @@ body, header {
 
 @font-face {
     font-family: NorthAvvelion;
-    src: url('../fonts/north-avellion/North Avellion DEMO.ttf');
+    src: url('../fonts/north-avellion/NorthAvellion.otf');
 }
 
 @font-face {
-    font-family: Montserrat-Regular;
-    src: url('../fonts/Montserrat/Montserrat-Regular.ttf');
+    font-family: Montserrat-Light;
+    src: url('../fonts/Montserrat/Montserrat-Light.ttf');
 }
 
 @font-face {
@@ -28,13 +23,29 @@ body, header {
     src: url('../fonts/Montserrat/Montserrat-Bold.ttf');
 }
 
+main, header {
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    font-family: Montserrat-Light;
+}
+
+// General //
+
+body {
+    overflow: hidden;
+}
+
+.bold {
+    font-family: Montserrat-Bold;
+}
+
+h2 {
+    font-family: NorthAvvelion;
+    font-size: 125px;
+}
+
 
 // Header //
-
-.header__topbar {
-    display: flex;
-    align-items: center;
-}
 
 .plus {
     font-family: OpenSans-Bold;
@@ -44,31 +55,122 @@ body, header {
 
 .tagline {
     font-family: OpenSans-Light;
-    font-size: 24px;
-    margin-bottom: 0;
+    font-size: 15px;
+    margin-bottom: 5px;
     padding-left: 5px;
 }
 
 .header__title__section {
     display: flex;
     flex-direction: column;
-    background-color: rgb(244,244,244);
     text-align: center;
-    height: 100%;
     h2 {
-        padding: 50px 0;
+        padding: 15px 0;
+        font-size: 50px;
     }
     p {
-        font-family: Montserrat-Regular;
+        font-family: Montserrat-Light;
     }
-    .bold {
+    span {
         font-family: Montserrat-Bold;
     }
 }
 
-h2 {
-    //font-family: NorthAvvelion;
-    font-size: 120px;
+
+// Body //
+
+.page__title {
+    text-align: center;
+    padding: 45px 0;
 }
+
+.title__layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spotify__section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.horizontal_line {
+    margin: 7% 0
+}
+
+.title__name {
+    font-size: 75px;
+}
+
+// Banner //
+
+.banner {
+    margin-top: 12%;
+    text-align: center;
+    background-color: rgb(240, 180, 26);
+    color: white;
+}
+
+// Footer //
+
+footer {
+    p {
+        font-size: 20px;
+        font-family: OpenSans-Light;
+    }
+    .link__style {
+        text-decoration: none;
+        color: black;
+    }
+    .link__style:hover {
+        transform: scale(1.2);
+        font-family: OpenSans-Bold;
+        color: black;
+    }
+}
+
+
+// Responsive //
+
+@media (min-width: 1000px){
+    .tagline {
+        font-size: 20px;
+        margin-bottom: 0;
+        padding-left: 20px;
+    }
+
+    .page__title {
+        padding: 90px 0;
+    }
+
+    .header__title__section {
+        line-height: 1.9;
+        h2 {
+            font-size: 30px;
+        }
+    }
+}
+
+@media (min-width: 1400px){
+   .header__title__section {
+        h2 {
+            font-size: 50px;
+            padding: 55px 0;
+        }
+    }
+}
+
+@media (min-width: 1700px){
+    .header__title__section {
+        h2 {
+            font-size: 100px;
+            padding: 55px 0;
+        }
+    }
+}
+
+// Animations //
 
 
