--- a/public/css/app.css
+++ b/public/css/app.css
@@ -121,22 +121,47 @@ footer p {
     padding: 90px 0;
   }
 
-  .header__title__section {
-    line-height: 1.9;
+  .header__title__section p {
+    font-size: 10px;
+  }
+  .header__title__section span {
+    font-size: 10px;
   }
   .header__title__section h2 {
-    font-size: 30px;
+    font-size: 60px;
+    padding: 10px 0;
+  }
+}
+@media (min-width: 1200px) {
+  .header__title__section p {
+    font-size: 13px;
+  }
+  .header__title__section span {
+    font-size: 13px;
+  }
+  .header__title__section h2 {
+    font-size: 70px;
+    padding: 10px 0;
   }
 }
 @media (min-width: 1400px) {
+  .header__title__section p {
+    font-size: 15px;
+  }
+  .header__title__section span {
+    font-size: 15px;
+  }
   .header__title__section h2 {
-    font-size: 50px;
-    padding: 55px 0;
+    font-size: 85px;
+    padding: 13px 0;
   }
 }
 @media (min-width: 1700px) {
+  .header__title__section p {
+    font-size: 16px;
+  }
   .header__title__section h2 {
     font-size: 120px;
-    padding: 45px 0;
+    padding: 35px 0;
   }
 }
