remarks header paddings

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -110,6 +110,19 @@ footer p {
   font-family: OpenSans-Light;
 }
 
+@media (min-width: 768px) {
+  .header__title__section p {
+    font-size: 8px;
+  }
+  .header__title__section span {
+    font-size: 10px;
+  }
+  .header__title__section h2 {
+    font-size: 70px;
+    padding-top: 20px;
+    padding-bottom: 0;
+  }
+}
 @media (min-width: 1000px) {
   .tagline {
     font-size: 20px;
@@ -128,8 +141,9 @@ footer p {
     font-size: 10px;
   }
   .header__title__section h2 {
-    font-size: 60px;
-    padding: 10px 0;
+    font-size: 70px;
+    padding-top: 20px;
+    padding-bottom: 0;
   }
 }
 @media (min-width: 1200px) {
@@ -140,8 +154,23 @@ footer p {
     font-size: 13px;
   }
   .header__title__section h2 {
-    font-size: 70px;
-    padding: 10px 0;
+    font-size: 85px;
+    padding-top: 20px;
+  }
+}
+@media (min-width: 1300px) {
+  .header__title__section p {
+    font-size: 13px;
+  }
+  .header__title__section span {
+    font-size: 13px;
+  }
+  .header__title__section h2 {
+    font-size: 90px;
+    padding-top: 25px;
+  }
+  .header__title__section .smiley {
+    padding-top: 15px;
   }
 }
 @media (min-width: 1400px) {
@@ -152,8 +181,26 @@ footer p {
     font-size: 15px;
   }
   .header__title__section h2 {
-    font-size: 85px;
-    padding: 13px 0;
+    font-size: 90px;
+    padding-top: 35px;
+  }
+  .header__title__section .smiley {
+    padding-top: 35px;
+  }
+}
+@media (min-width: 1600px) {
+  .header__title__section p {
+    font-size: 15px;
+  }
+  .header__title__section span {
+    font-size: 15px;
+  }
+  .header__title__section h2 {
+    font-size: 100px;
+    padding-top: 45px;
+  }
+  .header__title__section .smiley {
+    padding-top: 60px;
   }
 }
 @media (min-width: 1700px) {
@@ -162,6 +209,9 @@ footer p {
   }
   .header__title__section h2 {
     font-size: 120px;
-    padding: 35px 0;
+    padding-top: 55px;
+  }
+  .header__title__section .smiley {
+    padding-top: 55px;
   }
 }
