--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,6 +88,8 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
+  color: black;
 }
 
 .horizontal_line {
@@ -96,6 +98,10 @@ h2 {
 
 .title__name {
   font-size: 75px;
+}
+
+.spotify__button {
+  text-align: center;
 }
 
 .banner {
